# Jikong-BMS-CAN

./: .gitignore  README.md  pyproject.toml
docs/: canalyzer-sdk-inventory.md  controlcan-integration-notes.md  jikong-protocol-v2.1-decisions.md  phase2-can-io.md  phase3-data-recording.md  phase4-gui.md  phase5-control-safety.md  phase6-field-validation.md  phase6-windows-release.md  phase7-multi-bms-raw-replay.md  v1.2-record-replay-reliability.md
packaging/: bms_can_monitor.spec  launcher.py  version_info.txt
tests/: conftest.py  test_app_paths.py  test_bitrate_timing.py  test_bms_addressing.py  test_bms_dashboard.py  test_bus_config.py  test_can_worker.py  test_canalyst2_adapter.py  test_cell_voltage_assembly.py  test_control_audit.py  test_control_command.py  test_control_controller.py  test_control_panel.py  test_control_safety.py  test_controlcan_binding.py  test_controlcan_dll_arch.py  test_controlcan_structs.py  test_data_pipeline.py  test_dbc_decode_examples.py  test_device_discovery.py  test_export_csv.py  test_gui_controller.py  test_gui_models.py  test_gui_window.py  test_id_alignment.py  test_multi_bms_pipeline.py  test_multi_bms_waveform.py  test_protocol_byte_utils.py  test_protocol_examples.py  test_recorder_schema.py  test_recording_audit.py  test_recording_reader.py  test_release_verifier.py  test_replay_dialog.py  test_replay_worker.py  test_ring_buffer.py  test_state_store.py  test_tx_frame_building.py  test_tx_scheduler.py
tools/: build_windows_release.ps1  canalyst2_check.py  export_recording.py  inspect_controlcan_dll.py  replay_log.py  (+3 more)
(+50 files in other folders)
