[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bms-can-monitor"
version = "0.1.0"
description = "CANalyst-II based CAN tool and Jikong BMS monitor."
requires-python = ">=3.12"
dependencies = [
  "PySide6",
  "pyqtgraph",
  "numpy",
  "pandas",
  "cantools",
  "PyYAML",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pyinstaller",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

